@@ -198,7 +198,7 @@ module Rufus::Lua
       when TrueClass then Lib.lua_pushboolean(@pointer, 1)
       when FalseClass then Lib.lua_pushboolean(@pointer, 0)
 
-      when Fixnum then Lib.lua_pushinteger(@pointer, o)
+      when Integer then Lib.lua_pushinteger(@pointer, o)
       when Float then Lib.lua_pushnumber(@pointer, o)
 
       when String then Lib.lua_pushlstring(@pointer, o, o.bytesize)
