@@ -2,7 +2,7 @@
 module Rufus
 module Lua
 
-  VERSION = '1.1.3'
+  VERSION = '1.1.4'
 end
 end
 
